@@ -1,5 +1,9 @@
 2012-10-27  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
+	* dwfl_report_elf.c (__libdwfl_report_elf): Remove BASE aligning.
+
+2012-10-27  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
 	* dwfl_report_elf.c (__libdwfl_report_elf): Simplify START and BIAS
 	calculation.
 
